examples/test/testpolicy9607.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9607
  namespace: namespace220
spec:
  podSelector:
    matchLabels:
      key26: value30
      key19: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value17
      podSelector:
        matchLabels:
          key44: value46
          key17: value17
